Fixed IE6 margin spacing for image caption

--- a/src/main/resources/web/themes/default/view-article.css
+++ b/src/main/resources/web/themes/default/view-article.css
@@ -30,6 +30,10 @@
    padding: 0.5em; 
    background-color: #eee;
  }
+ 
+ * html div.vrtx-introduction-image div.vrtx-imagetext {
+   margin-top: -0.3em;
+ }
 
  div.vrtx-introduction-image div.vrtx-imagetext span.vrtx-imagetitle{
    font-weight: bold;
